force-app/main/default/objects/PartnerTierRuleGroup__c/PartnerTierRuleGroup__c.object-meta.xml
<CustomObject>
    <description>OR-group container for partner tier rule conditions.</description>
    <label>Partner Tier Rule Group</label>
    <nameField>
        <displayFormat>PTRG-{00000}</displayFormat>
        <label>Rule Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Tier Rule Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>