force-app/main/default/objects/PartnerTierRuleGroup__c/fields/Group_Label__c.field-meta.xml
<CustomField>
    <fullName>Group_Label__c</fullName>
    <description>Business label for OR group.</description>
    <label>Group Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>