force-app/main/default/objects/PartnerTierRuleGroup__c/fields/Group_Order__c.field-meta.xml
<CustomField>
    <fullName>Group_Order__c</fullName>
    <description>Evaluation order for OR groups within one rule version.</description>
    <label>Group Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>