force-app/main/default/objects/PartnerTierRuleGroup__c/fields/Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Rule_Version__c</fullName>
    <description>Parent rule version record.</description>
    <label>Rule Version</label>
    <referenceTo>PartnerTierRuleVersion__c</referenceTo>
    <relationshipLabel>Rule Groups</relationshipLabel>
    <relationshipName>Rule_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>